--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,16 @@ button.geolocate-button {
   font-size: 13px;
   border-radius: 3px;
 }
+
+.open-source {
+  font-size: 10px;
+  margin: 0 auto;
+}
+
+.open-source a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
