--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,12 @@ a:hover {
   text-decoration: none;
   color: #11305b;
 }
+
+.high-temp {
+  font-size: 13px;
+}
+
+.low-temp {
+  font-size: 13px;
+  opacity: 0.7;
+}
