--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ a:hover {
   font-size: 14px;
 }
 
-.unit-conversion {
+#unit-conversion {
   font-size: 13px;
 }
 
@@ -95,4 +95,8 @@ a:hover {
 .low-temp {
   font-size: 13px;
   opacity: 0.7;
+}
+
+.hidden {
+  display: none;
 }
